# chip8-emulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: debugging.h  main.cpp  vector.h  window.cpp  window.h
src/core/: interpreter.cpp  interpreter.h  renderer.cpp  renderer.h  window.cpp  window.h
tests/: CMakeLists.txt  config.h.in  interpreter.cpp  load_test.c8  window.cpp
